--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,19 @@
 {
   "name": "developersrede/erede-php",
-  "version": "5.2.1",
+  "version": "5.1.3",
   "description": "e.Rede integration SDK",
   "minimum-stability": "stable",
   "license": "MIT",
   "type": "library",
   "require": {
-    "php": "^8.1",
+    "php": ">=7.2",
     "ext-curl": "*",
     "ext-json": "*",
-    "psr/log": "*",
+    "psr/log": "^1.1",
     "monolog/monolog": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5.0",
-    "friendsofphp/php-cs-fixer": "^v3.11.0",
-    "phpstan/phpstan": "^1.8.6",
-    "squizlabs/php_codesniffer": "^3.7",
-    "sebastian/phpcpd": "^6.0.0"
+    "phpunit/phpunit": "*"
   },
   "autoload": {
     "psr-4": {
